2005-11-06 Jochen
 PATCH: [ 1327413 ] Fix bug in CDirDoc::AllowUpwardDirectory()
 Change CDirView::AreItemsOpenable() to consider archive files as openable
  Src: DirActions.cpp DirDoc.cpp DirView.cpp

2005-11-05 Perry
 PATCH: [ 1337905 ] Allow comparing binary files with binary unpacker
  Src: DirView.cpp
 PATCH: [ 1348733 ] Fix open dialog for cvs version 2.4
  Src: OpenDlg.cpp

2005-11-04 Perry
 PATCH: [ 1335072 ] Add text to Plugins.txt to cover DisplayXMLFiles
  Plugins/dlls: Plugins.txt

2005-11-02 WinMerge experimental release 2.5.0.1 (cvs)

2005-11-02 Kimmo
 BUG: [ 1341243 ] Current Find string is too fragile
  Was resetting find string after rescanning
  Src/editlib: ccrystaltextview.cpp
 PATCH: [ 1342550 ] Modernize file selection dialog
 PATCH: [ 1345110 ] Properly compare projectfile extension
  Src: Merge.cpp Merge.h OpenDlg.cpp
 Bump ShellExtension version to 1.6.2
  ShellExtension: ShellExtension.rc

2005-11-02 Tim
 PATCH: [ 1345382 ] Translated Shell Extension to German
  ShellExtension/Languages: ShellExtensionGerman.rc

2005-10-31 Kimmo
 RFE: [ 1324314 ] CTRL+W to close current diff
  Src: Merge.rc
  Src/Languages: *.rc
 PATCH: [ 1342871 ] Disable Copy Filenames for folders
  Src: DirView.cpp DirView.h
 PATCH: [ 1343059 ] Swedish translation update for 2.5.0.1 experimental
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2005-10-30 Kimmo
 PATCH: [ 1341813 ] VSS project linking misdetects project files
  Src: VSSHelper.cpp
 PATCH: [ 1310710 ] Fix bug #1309450
  Submitted by Jochen
  Src: DiffContext.cpp DiffContext.h DiffFileInfo.cpp DiffFileInfo.h DirScan.cpp

2005-10-29 Kimmo
 PATCH: [ 1341183 ] Fix VSS checkout canceling
  Src: DirActions.cpp MainFrm.cpp
 Open 2.4 manual (update link)
  Src: MainFrm.cpp

2005-10-25 Perry
 PATCH: [ 1334444 ] Remove needless (& therefore confusing) cast
  Src: LocationView.cpp

2005-10-23 Perry
 PATCH: [ 1334484 ] Skip location view paint if buffer not initialized