@@ -1,3 +1,7 @@
+2005-11-08 Kimmo
+ Merge Perry's fix for OpenDlg/SelectFile() to Merge.cpp/SelectFile() (PATCH #1348733)
+  Src: Merge.cpp
+
 2005-11-06 Jochen
  PATCH: [ 1327413 ] Fix bug in CDirDoc::AllowUpwardDirectory()
  Change CDirView::AreItemsOpenable() to consider archive files as openable
